bootstrap/argocd/base/route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "argocd.up.american-broomstick.com"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
